sqlx_insert/tests/ui/not_compatible_fields.stderr
error[E0277]: the trait bound `ComplexType: Type<Postgres>` is not satisfied
 --> tests/ui/not_compatible_fields.rs:5:10
  |
5 | #[derive(SQLInsert, Clone, Debug)]
  |          ^^^^^^^^^ the trait `Type<Postgres>` is not implemented for `ComplexType`
  |
  = help: the following other types implement trait `Type<DB>`:
            <bool as Type<Sqlite>>
            <bool as Type<Postgres>>
            <bool as Type<sqlx::Any>>
            <i8 as Type<Sqlite>>
            <i8 as Type<Postgres>>
            <i16 as Type<Sqlite>>
            <i16 as Type<Postgres>>
            <i16 as Type<sqlx::Any>>
          and $N others
  = help: see issue #48214
  = note: this error originates in the derive macro `SQLInsert` (in Nightly builds, run with -Z macro-backtrace for more info)
